--- a/notebooks/001-qa.ipynb
+++ b/notebooks/001-qa.ipynb
@@ -25,21 +25,12 @@
    "execution_count": 2,
    "id": "ee878d8e-a5e7-4502-9492-5e8366ab2535",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
-    "load_dotenv('.env')"
+    "load_dotenv('.env')\n",
+    "from warnings import filterwarnings\n",
+    "filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -49,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pdf_qa_bot import pdf_utils, embeddings"
+    "from pdf_qa_bot import pdf_utils, embeddings, main"
    ]
   },
   {
@@ -69,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "<pdf_qa_bot.pdf_utils.PDFUtils at 0x744708750440>"
+       "<pdf_qa_bot.pdf_utils.PDFUtils at 0x7e2fc208fa10>"
       ]
      },
      "execution_count": 4,
@@ -247,25 +238,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54874ac3-591b-4941-8f32-524606e5289b",
+   "cell_type": "markdown",
+   "id": "0195cc47-a7ee-4327-aa48-7daac172fc65",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Ask"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "dc12577d-2499-4d14-9a2b-26e8b88f1258",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Ashish Vaswani, Noam Shazeer, Niki Parmar, Jakob Uszkoreit, Llion Jones, Aidan N. Gomez, Łukasz Kaiser, Illia Polosukhin'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main.Ask(query=\"Who are the authors of the research paper.\").ask(texts=texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f24c2def-d309-4444-b0f1-a9defcc7c2c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Attention Is All You Need'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main.Ask(query=\"What is the title of research paper.\").ask(texts=texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "79b98752-d06b-4b14-b9ad-2b03a6e7ceab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nThis paper discusses the use of attention mechanisms in sequence transduction models. It compares these models to the traditional methods of using recurrent or convolutional neural networks. The authors also introduce a new model, the Transformer, which uses only attention mechanisms and no recurrent or convolutional layers. They conduct experiments to show the effectiveness of this new model, and provide analysis of the attention heads in the model.'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main.Ask(query=\"Please Summarize this paper.\").ask(texts=texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f06f886f-6fbd-4a42-80db-bbeb13f74214",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" {'Jakob Uszkoreit': 'uszkoreit@google.com', 'Ashish Vaswani': 'vaswani@google.com', 'Noam Shazeer': 'shazeer@google.com', 'Niki Parmar': 'nikip@google.com', 'Llion Jones': 'llionj@google.com'}\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main.Ask(query=\"Give me the names and emails or authors in the form of python dictionary, for example {'name': 'email'}.\").ask(texts=texts)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f24c2def-d309-4444-b0f1-a9defcc7c2c5",
+   "id": "a0435ce7-35e7-4772-b02f-763a753abce3",
    "metadata": {},
    "outputs": [],
    "source": []
